--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -15,10 +15,15 @@
 
   <application-components>
     <!-- Add your application components here -->
+      <component>
+          <implementation-class>org.github.erikzielke.gotoproject.GoToProjectApplicationComponent</implementation-class>
+      </component>
   </application-components>
 
   <project-components>
-    <!-- Add your project components here -->
+    <component>
+        <implementation-class>org.github.erikzielke.gotoproject.GoToProjectProjectComponent</implementation-class>
+    </component>
   </project-components>
 
   <actions>
