--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>org.github.erikzielke.gotoproject</id>
   <name>Go To Project</name>
-  <version>1.1.2</version>
+  <version>1.1.3</version>
   <vendor email="erikzielke@hotmail.com" >Erik Zielke</vendor>
 
   <description><![CDATA[
@@ -11,6 +11,7 @@
 
   <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Build+Number+Ranges for description -->
   <idea-version since-build="107.105"/>
+  <depends>com.intellij.modules.lang</depends>
 
 
   <application-components>
