Remove open projects from recent list

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,7 +5,7 @@
   <vendor email="erikzielke@hotmail.com" >Erik Zielke</vendor>
 
   <description><![CDATA[
-      Enables opening project windows with speed search
+      Enables opening project windows with speed search. Includes currently open projects and recent open projects as well.
       ]]></description>
 
 
