--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,14 @@ jobs:
   publish:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    env:
+        PUBLISH_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
+        PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+        PRIVATE_KEY_PASSWORD: ${{ secrets.PRIVATE_KEY_PASSWORD }}
+        CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
