--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,9 @@ jobs:
         CERTIFICATE_CHAIN: ${{ secrets.CERTIFICATE_CHAIN }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
+      - name: Run a multi-line script
+        run: |
+          env
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
