--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,6 +4,8 @@
     <version>1.3.0</version>
     <vendor email="erikzielke@hotmail.com" >Erik Zielke</vendor>
 
+    <idea-version since-build="211.6693.111"/>
+
     <description><![CDATA[
       Enables opening project windows with speed search
       ]]></description>
