--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,7 +4,7 @@
     <version>1.3.0</version>
     <vendor email="erikzielke@hotmail.com" >Erik Zielke</vendor>
 
-    <idea-version since-build="211.6693.111"/>
+    <idea-version since-build="223.7571.4"/>
 
     <description><![CDATA[
       Enables opening project windows with speed search
@@ -24,9 +24,11 @@
 
     <applicationListeners>
         <listener class="org.github.erikzielke.gotoproject.focus.GoToProjectProjectManagerListener" topic="com.intellij.openapi.project.ProjectManagerListener" />
+
     </applicationListeners>
 
     <extensions defaultExtensionNs="com.intellij">
+        <postStartupActivity implementation="org.github.erikzielke.gotoproject.focus.GoToProjectProjectManagerListener" />
         <applicationConfigurable instance="org.github.erikzielke.gotoproject.GotoProjectApplicationConfigurable" />
         <searchEverywhereContributor implementation="org.github.erikzielke.gotoproject.searcheverywhere.GoToProjectSearchEverywhereContributorFactory" />
         <!-- Add your extensions here -->
