--- a/.github/workflows/detekt-analysis.yml
+++ b/.github/workflows/detekt-analysis.yml
@@ -71,5 +71,5 @@ jobs:
     - uses: github/codeql-action/upload-sarif@v3
       with:
         # Path to SARIF file relative to the root of the repository
-        sarif_file: ${{ github.workspace }}/build/reports/detekt/detekt.sarif.json
+        sarif_file: ${{ github.workspace }}/build/reports/detekt/detekt.sarif
         checkout_path: ${{ github.workspace }}
