chore: integrate Spotless for code formatting and update workflows, README, and build script accordingly

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,12 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: 21
-      - uses: gradle/gradle-build-action@v2
+      - name: Check code formatting
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: spotlessCheck
+
+      - name: Build
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: build
